// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`T23 @State → data + 赋值改写 > 基本页面：state 初始值 + 自增改写快照 1`] = `
"// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  state: {
    count: 0,
    list: [],
  },
  methods: {
    inc() {
      this.__set('count', this.count + 1);
    },
  },
});
"
`;

exports[`T23 @State → data + 赋值改写 > 赋值改写全形态：= / += / 嵌套路径 / 下标 / ++ 1`] = `
"// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  state: {
    count: 0,
    user: {"name":""},
    list: [],
  },
  methods: {
    run() {
      this.__set('count', 1);
      this.__set('count', this.count + (2));
      this.__set('user.name', 'x');
      this.__set('list[0]', 9);
      this.__set('count', this.count - 1);
    },
  },
});
"
`;

exports[`T24 @Prop / @Link → properties > @Link：properties + __set 桥接方法 + 赋值改写为桥接调用 1`] = `
"// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  properties: {
    isOn: Boolean,
  },
  methods: {
    __set_isOn(v) {
      this.setData({ isOn: v });
      this.triggerEvent('update:ison', v);
    },
    toggle() {
      this.__set_isOn(!this.isOn);
    },
  },
});
"
`;

exports[`T24 @Prop / @Link → properties > @Prop：完整形式（带默认值）与简写形式 1`] = `
"// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  properties: {
    value: { type: Number, value: 0 },
    label: String,
  },
});
"
`;

exports[`T25 生命周期映射 + 方法抽取 > 组件：仅 aboutToAppear / onDidBuild / aboutToDisappear 三个钩子 1`] = `
"// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  methods: {
    aboutToAppear() {
      this.init();
    },
    onDidBuild() {},
  },
});
"
`;

exports[`T25 生命周期映射 + 方法抽取 > 页面：钩子以 ArkUI 名称入 methods，aboutToAppear 带 options 1`] = `
"// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  methods: {
    aboutToAppear(options) {
      this.load();
    },
    onPageShow() {
      console.log(1);
    },
    onDidBuild() {},
    onPageHide() {},
    aboutToDisappear() {
      this.dispose();
    },
    load() {
      this.ready = true;
    },
  },
});
"
`;

exports[`T26 @Watch → watch 表 > 带 @Watch 的 @State 生成 watch 表，回调方法原样进 methods 1`] = `
"// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  state: {
    count: 0,
    flag: false,
  },
  watch: {
    count: 'onCountChange',
  },
  methods: {
    onCountChange(value, key) {
      console.log(value);
    },
  },
});
"
`;

exports[`与 transform-events 的合并协议 > eventMethods 经同一套改写后并入 methods 末尾 1`] = `
"// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  state: {
    count: 0,
  },
  methods: {
    submit() {
      this.__set('count', 0);
    },
    __n7_click() {
      this.__set('count', this.count + 1);
      this.submit();
    },
  },
});
"
`;
